--- a/app/views/statics/contact.html.erb
+++ b/app/views/statics/contact.html.erb
@@ -1,2 +1,2 @@
-<h1>Statics#contact</h1>
-<p>Find me in app/views/statics/contact.html.erb</p>
+<h1>Contact</h1>
+<p>Pour contacter l'equipe, <a href='mailto:weshkikoolollesloulous@felixauchiottes.com'>envoyez nous un emails</a></p>
