--- a/app/views/statics/team.html.erb
+++ b/app/views/statics/team.html.erb
@@ -1,2 +1,8 @@
-<h1>Statics#team</h1>
-<p>Find me in app/views/statics/team.html.erb</p>
+<h1>Team</h1>
+<h4>Hey salut ! On te presente l'equipe</h4>
+<p>Alors voici Zozor 😇</p>
+<p>C'est notre programmeur front</p>
+<img src='http://i11.servimg.com/u/f11/13/71/82/14/ane1010.jpg' alt='Zozor'>
+<p>Et voici Pika ❤️</p>
+<img src='http://2.bp.blogspot.com/-A-8Wj7AHTQ0/UPPaDIl8aOI/AAAAAAAAAO0/kOT2KRNCDZM/s1600/pikachu.png' alt='Pika'>
+<p>Notre programmeur back</p>
