Ca fait le boulot

--- a/app/views/potins/show.html.erb
+++ b/app/views/potins/show.html.erb
@@ -1,22 +1,52 @@
 <% @lepotin = @potins[params[:id].to_i - 1] %>
 <br>
 <div class="jumbotron">
-	<div><h3 class="text-dark font-weight-bold"> Profil Potin <%= @lepotin.id %>:</h3>
-		<h5 class="display-20"><strong>Title : </strong><u><%= @lepotin.title %></u></h5></div>
+	<div><h3 class="text-dark font-weight-bold"> Potin Nr. <%= @lepotin.id %>:</h3>
+		<h5 class="display-20"><u><%= @lepotin.title %></u></h5></div>
 		<span class="lead"><br><%= @lepotin.content %></span>
 		<hr class="my-4">
 
-		<div class="badge badge-primary text-wrap" style="width: 6rem;"><strong> Auteur : </strong> <%= @lepotin.user.first_name %>
+		<div class="badge badge-primary text-wrap" style="width: 6rem;"><%= link_to "Auteur : #{@lepotin.user.first_name}", users_path(@lepotin.id, @lepotin.user.first_name), class:"text-white" %>
 		</div>
-<%= link_to @lepotin.user.first_name, users_path(@lepotin.id, @lepotin.user.first_name), class:"alert-link" %>
+
 	<div class="d-flex flex-row-reverse">
 		<a class="btn btn-primary btn-sm" href="..//edit" role="button">Editer le potin</a></div>
 	</div>
-
-
-
-
-
+<!--------------------------------AJOUT COMMENTAIRES --------------------------------------------->   
+   <div class="card">
+   	<div class="card-header", style="background-color: #e9ecef;">
+   		Commentaires :
+   	</div>
+   	<div class="card-body">
+   		<blockquote class="blockquote mb-0">
+	<form action='/' method='POST'>
+		<input type='hidden' name='authenticity_token' value='<%= form_authenticity_token %>'>
+		Balance ton blase : <input type='text' name='user'/><br/>
+		Balance ton comment : <input type='text' name='comment'/><br/>
+		<input type='submit' value='Commenter'/>
+	</form> 
+   			<footer class="blockquote-footer">Lache toi mon vieux ! <cite title="Source Title">par l'admin de THPotin</cite></footer>
+   		</blockquote>
+   	</div>
+   </div>
+<!-------------------------------------COMMENTAIRES---------------------------------------->   
+<div>
+	<% @lepotin.comments.each do |comment| %>
+	<br>
+	<div class="card">
+		<div class="card-header d-flex justify-content-between", style="background-color: #e9ecef;">
+			<span>Commentaire de <%= @lepotin.user.first_name %></span><span class=''><%= comment.created_at.to_s[0..-13] %></span>
+		</div>
+		<div class="card-body">
+			<blockquote class="blockquote mb-0">
+				<p><%= comment.content %></p>
+				<footer class="blockquote-footer ">Un geek de THP nommé <cite title="Source Title"><%= comment.user.first_name %> <%= comment.user.last_name %></cite>
+				</footer>
+			</blockquote>
+		</div>
+	</div>
+	<% end %>      
+</div>
 
 
 
