--- a/app/views/potins/show.html.erb
+++ b/app/views/potins/show.html.erb
@@ -19,7 +19,7 @@
    	</div>
    	<div class="card-body">
    		<blockquote class="blockquote mb-0">
-	<form action='/' method='POST'>
+	<form action='<%= params[:id] %>' method='POST'>
 		<input type='hidden' name='authenticity_token' value='<%= form_authenticity_token %>'>
 		Balance ton blase : <input type='text' name='user'/><br/>
 		Balance ton comment : <input type='text' name='comment'/><br/>
