--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,5 +1,5 @@
-<h1>Welcome <%= @name %></h1>
-<p>Hey salut <%= @name %> ! Bienvenue sur THE site de potins. <span class='font-weight-bold'>Eclate toi et viens cracher sur tes copains !</span></p>
+<br><h1>  Welcome <%= User.all.last.first_name %></h1><br>
+<p>  Hey salut <%= User.all.last.first_name %> ! Bienvenue sur THE site de potins. <span class='font-weight-bold'>Eclate toi et viens cracher sur tes copains !</span></p><br>
 
 <div>
 	<% @potins.each do |potin| %>
