--- a/app/views/statics/team.html.erb
+++ b/app/views/statics/team.html.erb
@@ -1,8 +1,15 @@
-<h1>Team</h1>
-<h4>Hey salut ! On te presente l'equipe</h4>
-<p>Alors voici Zozor 😇</p>
-<p>C'est notre programmeur front</p>
-<img src='http://i11.servimg.com/u/f11/13/71/82/14/ane1010.jpg' alt='Zozor'>
-<p>Et voici Pika ❤️</p>
-<img src='http://2.bp.blogspot.com/-A-8Wj7AHTQ0/UPPaDIl8aOI/AAAAAAAAAO0/kOT2KRNCDZM/s1600/pikachu.png' alt='Pika'>
-<p>Notre programmeur back</p>
+<center><h1>Team</h1><h4>Hey salut ! On te presente l'equipe</h4></center>
+	<center>
+		<div class='d-flex justify-content-around tuvamelescenteroupas'>
+			<div class='margin-left'>
+				<p>Alors voici Zozor 😇</p>
+				<img src='http://i11.servimg.com/u/f11/13/71/82/14/ane1010.jpg' alt='Zozor'>
+				<p>C'est notre programmeur front</p>
+			</div>
+			<div>
+				<p>Et voici Pika ❤️</p>
+				<img src='http://2.bp.blogspot.com/-A-8Wj7AHTQ0/UPPaDIl8aOI/AAAAAAAAAO0/kOT2KRNCDZM/s1600/pikachu.png' alt='Pika' style='width:55%'>
+				<p>Notre programmeur back</p>
+			</div>
+		</div>
+	</center>
