--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,15 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <style type="text/css">
+      body {
+  margin:auto;
+  max-width: 95%;
+  background-color: #f8f8f8;
+}
+
+    </style>
   </head>
 
   <body>
@@ -43,7 +51,7 @@
   <div class"border">
     <i class="fas fa-yin-yang fa-5x"></i><br><br>
     <h1 class="display-8">Magic</h1>
-    <p class="lead">La magie du cracher sur tes potes en toute impunite.</p>
+    <p class="lead">La magie de cracher sur tes potes en toute impunite.</p>
   </div>
   <div class"border">
     <i class="fas fa-atom fa-5x"></i> <br><br>
