--- a/app/views/statics/contact.html.erb
+++ b/app/views/statics/contact.html.erb
@@ -1,2 +1,2 @@
-<h1>Contact</h1>
-<p>Pour contacter l'equipe, <a href='mailto:weshkikoolollesloulous@felixauchiottes.com'>envoyez nous un emails</a></p>
+<center><h1>Contact</h1>
+<p>Pour contacter l'equipe, <a href='mailto:weshkikoolollesloulous@felixauchiottes.com'>envoyez nous un emails</a></p></center>
