--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,11 +1,11 @@
-<br><h1>  Welcome <%= User.all.last.first_name %></h1><br>
-<p>  Hey salut <%= User.all.last.first_name %> ! Bienvenue sur THE site de potins. <span class='font-weight-bold'>Eclate toi et viens cracher sur tes copains !</span></p><br>
+<center><br><h1>Welcome <%= User.all.last.first_name %></h1><br>
+<p>Hey salut <%= User.all.last.first_name %> ! Bienvenue sur THE site de potins. <span class='font-weight-bold'>Eclate toi et viens cracher sur tes copains !</span></p><br></center>
 
 <div>
 	<% @potins.each do |potin| %>
 <div class="card text-center">
   <div class="card-header">
-    par <%= potin.user.first_name %>
+    <%= potin.user.first_name %> a dit :
   </div>
   <div class="card-body">
     <h5 class="card-title"><%= potin.title %></h5>
