--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,4 +1,4 @@
-<center><br><h1>Welcome <%= User.all.last.first_name %></h1><br>
+<center><br><h1>WELCOME <%= User.all.last.first_name.upcase %></h1><br>
 <p>Hey salut <%= User.all.last.first_name %> ! Bienvenue sur THE site de potins. <span class='font-weight-bold'>Eclate toi et viens cracher sur tes copains !</span></p><br></center>
 
 <div>
