--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+   @font-face {
+    font-family: 'hacka';
+    src: url('hacka.ttf') format('truetype'),
+    font-weight: normal;
+    font-style: normal;
+}
+
+  
+  h1 {
+    font-family: hacka;
+  }
