--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,13 +10,23 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <style type="text/css">
-      body {
+    @font-face {
+    font-family: 'hacka';
+    src: url('hacka___.ttf') format('truetype'),
+    font-weight: normal;
+    font-style: normal;
+}
+    body {
   margin:auto;
   max-width: 95%;
   background-color: #f8f8f8;
 }
-
+  
+  h1 {
+    font-family: hacka;
+  }
     </style>
+  
   </head>
 
   <body>
