--- a/app/views/potins/show.html.erb
+++ b/app/views/potins/show.html.erb
@@ -1,4 +1,4 @@
-<% @lepotin = @potins[params[:id].to_i - 1] %>
+<% @lepotin = @potins.find(params[:id]) %>
 <br>
 <div class="jumbotron">
 	<div><h3 class="text-dark font-weight-bold"> Potin Nr. <%= @lepotin.id %>:</h3>
@@ -23,7 +23,7 @@
 	<form action='<%= params[:id] %>' method='POST'>
 		<input type='hidden' name='authenticity_token' value='<%= form_authenticity_token %>'>
 		Balance ton blase : <input type='text' name='user'/><br/>
-		Balance ton comment : <input type='text' name='comment'/><br/
+		Balance ton comment : <input type='text' name='comment'/>
 		<input type='submit' value='Commenter'/>
 	</form> 
    			<footer class="blockquote-footer">Lache toi mon vieux ! <cite title="Source Title">par l'admin de THPotin</cite></footer>
