Refonte routes a venir

--- a/app/views/potins/create.html.erb
+++ b/app/views/potins/create.html.erb
@@ -7,3 +7,7 @@
 	<center><div class='mt-auto'><%= submit_tag 'Creer' %></div></center>
 	<% end -%>
 </div>
+
+<%= form_tag(gossips_path) do -%>
+	<div class='mt-auto'><%= submit_tag 'Liker' %></div>
+	<% end -%>
