--- a/app/views/potins/show.html.erb
+++ b/app/views/potins/show.html.erb
@@ -1,60 +1,83 @@
-<% @lepotin = @potins.find(params[:id]) %>
 <br>
 
 <div class="jumbotron">
-	<div><h3 class="text-dark font-weight-bold"> Potin Nr. <%= @lepotin.id %>: </h3>
-		<h5 class="display-20"><u><%= @lepotin.title %></u></h5></div>
+	<div>
+		<h3 class="text-dark font-weight-bold"> Potin Nr. <%= @lepotin.id %>: </h3>
+		<h5 class="display-20"><u><%= @lepotin.title %></u></h5>
 		<span class="lead"><br><%= @lepotin.content %></span>
-		<div class='d-flex'></div><div class="badge badge-primary text-wrap margin" style="width: 4rem;"><%= @lepotin.likes.size.to_s %> Likes<%= form_tag(potins_path(params[:id])) do -%>
-	<div class='mt-auto'><%= submit_tag 'Liker' %></div>
-	<% end -%></div>
-	  
-	
+
+		<div class='d-flex'>			
+		</div>
+
+		<div class="badge badge-primary text-wrap margin" style="width: 4rem;"><%= @lepotin.likes.size.to_s %> likes <i class="fas fa-thumbs-up"></i>
+		</div>
+
+
 		<div class="d-flex justify-content-end">
 			<div>
-			<% @lepotin.tags.each do |tag| %>
-			<div class="badge badge-primary text-wrap margin" style="width: 4rem;"><%= "##{tag.title}" %></div>
-			<% end %>
+				<% @lepotin.tags.each do |tag| %>
+				<div class="badge badge-primary text-wrap margin" style="width: 4rem;	"><%= "##{tag.title}" %>
+				</div>
+				<% end %>
 			</div>
 		</div>
-		<hr class="my-4">
 
-		<div class="badge badge-primary text-wrap" style="width: 6rem;"><%= link_to "Auteur : #{@lepotin.user.first_name}", users_path(@lepotin.id, @lepotin.user.first_name), class:"text-white" %>
+		<hr class="my-4">
+		<div class="badge badge-primary text-wrap" style="width: 6rem;"><%= link_to "Auteur : #{@lepotin.user.first_name}", potin_user_path(@lepotin.id, @lepotin.user.first_name), class:"text-white" %>
 		</div>
-		<div class="d-flex flex-row-reverse"><%= link_to 'Editer le potin', edit_path, class:"btn btn-primary btn-sm", role:"button" %>
-	    </div>
+
+		<div class="d-flex flex-row-reverse"><%= link_to 'Editer le potin', edit_potin_path, class:"btn btn-primary btn-sm", role:"button" %>
+		</div>
 	</div>
 </div>
 <!--------------------------------AJOUT COMMENTAIRES --------------------------------------------->   
-   <div class="card">
-   	<div class="card-header", style="background-color: #e9ecef;">
-   		Commentaires :
-   	</div>
-   	<div class="card-body">
-   		<blockquote class="blockquote mb-0">
-	<form action='<%= params[:id] %>' method='POST'>
-		<input type='hidden' name='authenticity_token' value='<%= form_authenticity_token %>'>
-		Balance ton blase : <input type='text' name='user'/><br/>
-		Balance ton comment : <input type='text' name='comment'/><br>
-		<input type='submit' value='Commenter'/>
-	</form> 
-   			<footer class="blockquote-footer">Lache toi mon vieux ! <cite title="Source Title">par l'admin de THPotin</cite></footer>
-   		</blockquote>
-   	</div>
-   </div>
+<div class="card">
+
+	<div class="card-header", style="background-color: #e9ecef;">
+		Balance ton comment : 
+	</div>
+
+	<div class="card-body">
+		<blockquote class="blockquote mb-0">
+			<div class='d-flex justify-content-center align-item-center'>
+				<%= form_tag(potin_comments_path(params[:id])) do -%>
+					<input type='hidden' name='authenticity_token' value='<%= form_authenticity_token %>'>
+					<div><%= text_area_tag 'Comment_text', nil, placeholder: 'Raconte moi tout...', size: "40x4" %></div><br>
+					<div class='mt-auto'><%= submit_tag 'Commenter' %></div>
+				<% end -%>
+			</div>
+			<footer class="blockquote-footer">Lache toi mon vieux ! <cite title="Source Title">par l'admin de THPotin</cite>
+			</footer>
+		</blockquote>
+	</div>
+
+</div>
+
+
+   	
+   		
+   		
+	
+
+
 <!-------------------------------------COMMENTAIRES---------------------------------------->   
 <div>
-	<% @lepotin.comments.each do |comment| %>
-	<br>
+	<% @lepotin.comments.each do |comment| %><br>
 	<div class="card">
 		<div class="card-header d-flex justify-content-between", style="background-color: #e9ecef;">
-			<span>Commentaire de <%= comment.user.first_name %></span><span class=''><%= comment.created_at.to_s[0..-13] %></span>
+			<span>Commentaire de <%= comment.user.first_name %></span>
+			<span class=''>Le <%= comment.created_at.to_s[0..-13] %></span>
 		</div>
 		<div class="card-body">
 			<blockquote class="blockquote mb-0">
 				<p><%= comment.content %></p>
-				<footer class="blockquote-footer ">Un geek de THP nommé <cite title="Source Title"><%= comment.user.first_name %> <%= comment.user.last_name %></cite>
-				</footer>
+
+				<div class="justify-content-between">
+					<footer class='blockquote-footer d-flex align-self-start'>Un geek de THP - <cite title="Source Title"><%= comment.user.first_name %> <%= comment.user.last_name %></cite>
+					</footer>
+					<i class="fas fa-thumbs-up"></i> <p>ESSAYER EN METANT CLASSBLOQUOTE DANS P</p>
+				</div>
+
 			</blockquote>
 		</div>
 	</div>
