--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,35 +46,10 @@
     </div>
   </nav>
 <!------------------------------- YIELD ------------------------->
-<% flash.each do |name, msg| %>
-   <% if content_tag :div, msg, :class => :notice %>
-<br>
-<div class="alert alert-success" role="alert">
-  <h4 class="alert-heading">Bravo</h4>
-  Votre potin a ete cree avec succes! 
-  </ul>
-  <hr>
-  <p class="mb-0">Merci de votre mechancete, continuez a vous lacher sur vos collegues !</p>
-</div>
-   <% elsif content_tag :div, msg, :class => :alerte %>
-<div class="alert alert-danger" role="alert">
-  <h4 class="alert-heading">Erreur!</h4>
-  <p>Nous n'avons pas réussi à créer le potin pour la (ou les) raison(s) suivante(s) :</p>  <ul>
-    <% @potin.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    </ul>
-  <hr>
-  <p class="mb-0">Veuillez reesayer, suivre les consignes et rester patient.</p>
-</div>
-  <% else %>
-    puts 'Ouaiiiis'
-    <% end %>
-<% end %>
+ <% flash.each do |name, msg| %>
+    <%= content_tag :div, msg, class: "alert alert-info" %>
+  <% end %>
 
-
-
-
-<% end %>
    
 
 
