--- a/app/views/potins/create.html.erb
+++ b/app/views/potins/create.html.erb
@@ -7,3 +7,17 @@
   <p class="mb-0">Merci de votre mechancete, continuez a vous lacher sur vos collegues !</p>
 </div>
 <% end %>
+
+
+<br><% if @potin.errors.any? %>
+<div class="alert alert-danger" role="alert">
+  <h4 class="alert-heading">Erreur!</h4>
+  <p>Nous n'avons pas réussi à créer le potin pour la (ou les) raison(s) suivante(s) :</p>  <ul>
+    <% @potin.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+  <hr>
+  <p class="mb-0">Veuillez reesayer, suivre les consignes et rester patient.</p>
+</div>
+<% end %>
