--- a/app/views/potins/edit.html.erb
+++ b/app/views/potins/edit.html.erb
@@ -1,1 +1,27 @@
-<br><br><br><center><h1>Fonctionnalite bientot disponible !</h1></center><br><br><br><br><br><br><br><br><br>
+<br>
+<% if @lepotin.errors.any? %>
+  <h3>Please fix these errors:</h3>
+  <ul>
+    <% @lepotin.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
+
+<div class="d-flex flex-column align-items-center">
+	<h1>Editer un THPotin</h1>
+
+<%= form_for @lepotin do |f| %>
+	<div class='form-group'>
+		<label>Titre :</label>
+  		<%= f.text_field :title, size: '50', class:'form_control' %>
+  	</div>
+	<div class='form-group'>
+		<label>Potin :</label>
+  		<%= f.text_area :content, size: "50x10", class:'form_control' %>
+  	</div>
+	<div class='form-group'>
+  		<%= f.submit "Edit" %>
+	</div>
+<% end %>
