--- a/app/views/potins/show.html.erb
+++ b/app/views/potins/show.html.erb
@@ -1,16 +1,46 @@
-<br>
 
+<% if @comment.errors.any? %>
+  <h3>Please fix these errors:</h3>
+  <ul>
+    <% @comment.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+<br>
 <div class="jumbotron">
-	<div>
-		<h3 class="text-dark font-weight-bold"> Potin Nr. <%= @lepotin.id %>: </h3>
+	<div>				
+		<h3 class="text-dark font-weight-bold d-flex justify-content-between"> 
+			<p>Potin Nr. <%= @lepotin.id %>: </p>
+			<span>
+				<p><%= link_to "Editer le potin", edit_potin_path, class:"btn btn-primary btn-sm", role:"button"  %>
+				<%= link_to "", potin_path, class:"btn btn-primary btn-md fas fa-times", role:"button", :data => {:confirm => "You sure?", :method => "delete"} %></p>
+			</span>
+		</h3>
+
 		<h5 class="display-20"><u><%= @lepotin.title %></u></h5>
 		<span class="lead"><br><%= @lepotin.content %></span>
 
 		<div class='d-flex'>			
 		</div>
+		
 
-		<div class="badge badge-primary text-wrap margin" style="width: 4rem;"><%= @lepotin.likes.size.to_s %> likes <i class="fas fa-thumbs-up"></i>
+		<%= form_tag(likes_path) do -%>
+		<%= hidden_field_tag 'id', @lepotin.id %>
+		<div class="badge badge-primary text-wrap margin" style="width: 4rem;"><%= @lepotin.likes.size.to_s %>
+			<% if @lepotin.likes.size <2 %>like
+				<% else %>likes <% end %> <i class="fas fa-thumbs-up"></i></div>
+			<%= submit_tag 'LIKES' %>
+		<% end -%>
+
+		<%= form_tag(likes_path) do -%>
+		<%= hidden_field_tag 'id', @lepotin.id %>
+             <button type="submit">
+		<div class="badge badge-primary text-wrap margin" style="width: 4rem;" role='input' type='submit' name='commit' value="Save changes" data-disable-with="6 likes">
+                <%= @lepotin.likes.size.to_s %> likes <i class="fas fa-thumbs-up"></i>
 		</div>
+              </button>   
+		<% end -%>
 
 
 		<div class="d-flex justify-content-end">
@@ -25,8 +55,7 @@
 		<hr class="my-4">
 		<div class="badge badge-primary text-wrap" style="width: 6rem;"><%= link_to "Auteur : #{@lepotin.user.first_name}", potin_user_path(@lepotin.id, @lepotin.user.first_name), class:"text-white" %>
 		</div>
-
-		<div class="d-flex flex-row-reverse"><%= link_to 'Editer le potin', edit_potin_path, class:"btn btn-primary btn-sm", role:"button" %>
+		<div class="badge badge-primary text-wrap" style="width: 6rem;"><%= link_to "City : #{@lepotin.user.city.name}", city_path(@lepotin.user.city.id), class:"text-white" %>
 		</div>
 	</div>
 </div>
@@ -53,27 +82,20 @@
 
 </div>
 
-
-   	
-   		
-   		
-	
-
-
 <!-------------------------------------COMMENTAIRES---------------------------------------->   
 <div>
 	<% @lepotin.comments.each do |comment| %><br>
 	<div class="card">
 		<div class="card-header d-flex justify-content-between", style="background-color: #e9ecef;">
 			<span>Commentaire de <%= comment.user.first_name %></span>
-			<span class=''>Le <%= comment.created_at.to_s[0..-13] %></span>
+			<span class=''><%= link_to "Editer", edit_comment_path(comment.id), class:"btn btn-primary btn-sm", role:"button"  %> </span>
 		</div>
 		<div class="card-body">
 			<blockquote class="blockquote mb-0">
 				<p><%= comment.content %></p>
 
 				<div class="justify-content-between">
-					<footer class='blockquote-footer d-flex align-self-start'>Un geek de THP - <cite title="Source Title"><%= comment.user.first_name %> <%= comment.user.last_name %></cite>
+					<footer class='blockquote-footer d-flex align-self-start'><%= comment.created_at.to_s[0..-13] %> - <cite title="Source Title"><%= comment.user.first_name %> <%= comment.user.last_name %></cite>
 					</footer>
 					<i class="fas fa-thumbs-up"></i> <p>ESSAYER EN METANT CLASSBLOQUOTE DANS P</p>
 				</div>
