controller user to users

--- a/app/views/connexion/new.html.erb
+++ b/app/views/connexion/new.html.erb
@@ -1,4 +1,4 @@
-Allez, on se connecte, donne moi ton email et ton password
+<br><center><h3> Connexion </h3></center><br>
 
 
 	<%= form_tag(connexion_index_path) do -%>
