petit commit de surete

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
   <!--     --------------------------- navbar  ----------------- -->
   <nav class="navbar sticky-top navbar-expand-lg navbar-dark d-flex", style="background-color: #7764de;">
 
-    <% logged_in? ? link = potins_path(current_user.first_name) : link = welcome_path %>
+    <% logged_in? ? link = potins_path(current_user.first_name) : link = new_user_path %>
     <%= link_to link, class:"navbar-brand" do %>
       <%= image_tag("logo.png", size: "90x24", alt: "Logo THP") %>
     <% end %>
@@ -36,7 +36,7 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <%= link_to "Villes", cities_index_path, class:"nav-item nav-link active" %>
-        <%= link_to "Users", user_index_path, class:"nav-item nav-link active" %>
+        <%= link_to "Users", users_path, class:"nav-item nav-link active" %>
         <%= link_to "Team", team_path, class:"nav-item nav-link" %>
         <span class="sr-only">(current)</span>
         <%= link_to "Contact", contact_path, class:"nav-item nav-link" %>
