--- a/app/views/potins/index.html.erb
+++ b/app/views/potins/index.html.erb
@@ -1,4 +1,4 @@
-<center><br><h1>WELCOME <%= current_user.first_name if logged_in? %></h1><br>
+<center><br><h1>WELCOME <%= current_user.first_name.upcase if logged_in? %></h1><br>
   <p>Hey salut <%= current_user.first_name if logged_in? %> ! Bienvenue sur THE site de potins. <span class='font-weight-bold'>Eclate toi et viens cracher sur tes copains !</span></p><br></center>
 
   <div>
