--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
 
 <body>
   <!--     --------------------------- navbar  ----------------- -->
+
   <nav class="navbar sticky-top navbar-expand-lg navbar-dark d-flex", style="background-color: #7764de;">
 
     <% logged_in? ? link = potins_path(current_user.first_name) : link = new_user_path %>
@@ -29,14 +30,22 @@
       <%= image_tag("logo.png", size: "90x24", alt: "Logo THP") %>
     <% end %>
 
-    <span class='col'>
-      <%= link_to "Paye ton potin!", new_potin_path, class:"navbar-brand" %>
+    <span class='collapse navbar-collapse justify-content-start" id="navbarNavAltMarkup'>
+      <div class="navbar-nav">
+        <% logged_in? ? activeornot = 'active' : activeornot = "disabled" %>
+      <%= link_to "Paye ton potin!", new_potin_path, class:"nav-item nav-link #{activeornot}" %>
+        <%= link_to "Potins", potins_path, class:"nav-item nav-link active" %>
+        <%= link_to "Villes", cities_index_path, class:"nav-item nav-link active" %>
+        <%= link_to "Users", users_path, class:"nav-item nav-link active" %>
+      </div>
     </span>
+    <div class="collapse navbar-collapse justify-content-start" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+      </div>
+    </div>
 
     <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <%= link_to "Villes", cities_index_path, class:"nav-item nav-link active" %>
-        <%= link_to "Users", users_path, class:"nav-item nav-link active" %>
         <%= link_to "Team", team_path, class:"nav-item nav-link" %>
         <span class="sr-only">(current)</span>
         <%= link_to "Contact", contact_path, class:"nav-item nav-link" %>
@@ -44,13 +53,17 @@
         <% if logged_in? %>
         <%= link_to "Se déconnecter", session_path(session[:user_id]), method: :delete, class:"nav-item nav-link" %>
         <% else %>
-        <%= link_to "Inscription", new_user_path, class:"nav-item nav-link" %>
-        <%= link_to "Connexion", new_connexion_path, class:"nav-item nav-link" %>
+  <%= link_to "Inscription", new_user_path, class:"nav-item nav-link active" %>
+<%= link_to "Connexion", new_connexion_path, class:"nav-item nav-link active" %>
         <% end %>      
+
 
       </div>
     </div>
   </nav>
+
+</div>
+
 
 
 
