--- a/app/views/potins/index.html.erb
+++ b/app/views/potins/index.html.erb
@@ -1,5 +1,5 @@
-<center><br><h1>WELCOME <%= current_user.first_name.upcase if logged_in? %></h1><br>
-  <p>Hey salut <%= current_user.first_name if logged_in? %> ! Bienvenue sur THE site de potins. <span class='font-weight-bold'>Eclate toi et viens cracher sur tes copains !</span></p><br></center>
+<center><br><h1>WELCOME <%= current_user.first_name.upcase if logged_in? && current_user %></h1><br>
+  <p>Hey salut <%= current_user.first_name if logged_in? && current_user %> ! Bienvenue sur THE site de potins. <span class='font-weight-bold'>Eclate toi et viens cracher sur tes copains !</span></p><br></center>
 
   <div>
    <% @potins.each do |potin| %>
@@ -11,17 +11,19 @@
       <h5 class="card-title"><%= potin.title %></h5>
       <p class="card-text"></p>
       <%= link_to "Voir le potin", potin_path(potin.id), class:"btn btn-primary" %>
-      <footer class='blockquote-footer d-flex align-self-start'>
-        <% if potin.comments.size == 0 %>
-        <%= potin.comments.size %> commentaire   <cite title="Source Title"></cite>
-        <% elsif potin.comments.size == 1 %>
-        <%= potin.comments.size %> commentaire    <cite title="Source Title"> par <%= potin.comments.first.user.first_name %></cite>
-        <% elsif potin.comments.size == 2 %>
-        <%= potin.comments.size %> commentaires   <cite title="Source Title"> par <%= potin.comments.first.user.first_name %> et <%= potin.comments[1].user.first_name %></cite>
-        <% else %>
-        <%= potin.comments.size %> commentaires   <cite title="Source Title"> par <%= potin.comments.first.user.first_name %>, <%= potin.comments[1].user.first_name %> et ..</cite>
-        <% end %>
-      </footer>
+      <div class='d-flex'>
+        <footer class='blockquote-footer align-self-start'>
+          <% if potin.comments.size == 0 %>
+          <%= potin.comments.size %> commentaire   <cite title="Source Title"></cite>
+          <% elsif potin.comments.size == 1 %>
+          <%= potin.comments.size %> commentaire    <cite title="Source Title"> par <%= potin.comments.first.user.first_name %></cite>
+          <% elsif potin.comments.size == 2 %>
+          <%= potin.comments.size %> commentaires   <cite title="Source Title"> par <%= potin.comments.first.user.first_name %> et <%= potin.comments[1].user.first_name %></cite>
+          <% else %>
+          <%= potin.comments.size %> commentaires   <cite title="Source Title"> par <%= potin.comments.first.user.first_name %>, <%= potin.comments[1].user.first_name %> et ..</cite>
+          <% end %>
+        </footer>
+      </div>
     </div>
     <div class="card-footer text-muted">
       <%= potin.date.strftime('%d %b %Y') %>
