--- a/app/views/potins/show.html.erb
+++ b/app/views/potins/show.html.erb
@@ -18,8 +18,11 @@
 		<h3 class="text-dark font-weight-bold d-flex justify-content-between"> 
 			<p>Potin Nr. <%= @lepotin.id %>: </p>
 			<span>
+				<% if current_user.potins.include? (@lepotin) %>
+
 				<p><%= link_to "Editer le potin", edit_potin_path, class:"btn btn-primary btn-sm", role:"button"  %>
 				<%= link_to "", potin_path, class:"btn btn-primary btn-md fas fa-times", role:"button", :data => {:confirm => "You sure?", :method => "delete"} %></p>
+				<% end %>
 			</span>
 		</h3>
 
@@ -30,22 +33,10 @@
 		</div>
 		
 
-		<%= form_tag(likes_path) do -%>
-		<%= hidden_field_tag 'id', @lepotin.id %>
-		<div class="badge badge-primary text-wrap margin" style="width: 4rem;"><%= @lepotin.likes.size.to_s %>
-			<% if @lepotin.likes.size <2 %>like
-				<% else %>likes <% end %> <i class="fas fa-thumbs-up"></i></div>
-			<%= submit_tag 'LIKES' %>
-		<% end -%>
-
-		<%= form_tag(likes_path) do -%>
-		<%= hidden_field_tag 'id', @lepotin.id %>
-             <button type="submit">
-		<div class="badge badge-primary text-wrap margin" style="width: 4rem;" role='input' type='submit' name='commit' value="Save changes" data-disable-with="6 likes">
-                <%= @lepotin.likes.size.to_s %> likes <i class="fas fa-thumbs-up"></i>
-		</div>
-              </button>   
-		<% end -%>
+		<%= link_to likes_path(@lepotin.id), method: :post, class:"btn btn-primary btn-sm", role:"button" do %>	
+			<div class="badge badge-primary text-wrap margin" style="width: 4rem;"><%= @lepotin.likes.size.to_s %>
+			<% if @lepotin.likes.size <2 %>like	<% else %>likes <% end %> <i class="fas fa-thumbs-up"></i></div>
+		<% end %>
 
 
 		<div class="d-flex justify-content-end">
@@ -89,26 +80,36 @@
 
 <!-------------------------------------COMMENTAIRES---------------------------------------->   
 <div>
+
 	<% @lepotin.comments.each do |comment| %><br>
 	<div class="card">
 		<div class="card-header d-flex justify-content-between", style="background-color: #e9ecef;">
 			<span>Commentaire de <%= comment.user.first_name %></span>
-			<span class=''><%= link_to "Editer", edit_comment_path(comment.id), class:"btn btn-primary btn-sm", role:"button"  %> </span>
+			<span>
+				<% if current_user.comments.include? (comment) %>
+					<%= link_to "Editer", edit_comment_path(comment.id), class:"btn btn-primary btn-sm", role:"button"  %> 
+				<% end %>
+			</span>
 		</div>
 		<div class="card-body">
 			<blockquote class="blockquote mb-0">
 				<p><%= comment.content %></p>
 
-				<div class="justify-content-between">
-					<footer class='blockquote-footer d-flex align-self-start'><%= comment.created_at.to_s[0..-13] %> - <cite title="Source Title"><%= comment.user.first_name %> <%= comment.user.last_name %></cite>
-					</footer>
-					<i class="fas fa-thumbs-up"></i> <p>ESSAYER EN METANT CLASSBLOQUOTE DANS P</p>
-				</div>
+				<div class="d-flex justify-content-between">
+					<div class='blockquote-footer align-self-start'><%= comment.created_at.to_s[0..-13] %> - <cite title="Source Title"><%= comment.user.first_name %> <%= comment.user.last_name %></cite>
+					</div>
 
+					<div>
+						<%= link_to likes_path(:monparams => { :potin_id => @lepotin.id, :comment_id => comment.id }), method: :potin_user_path, role:"button" do %>
+							<%= comment.likes.size.to_s %> <i class="fas fa-thumbs-up"></i>
+						<% end %>
+					</div>		
+         		</div>
 			</blockquote>
 		</div>
 	</div>
 	<% end %>      
+
 </div>
 
 
